; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_media_list.c_libvlc_media_list_add_media.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_media_list.c_libvlc_media_list_add_media.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libvlc_media_list_add_media(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @mlist_is_writable(i32* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %14

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @libvlc_media_list_internal_add_media(i32* %11, i32* %12)
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %10, %9
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @mlist_is_writable(i32*) #1

declare dso_local i32 @libvlc_media_list_internal_add_media(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
